fixtures/typescript/fallback/should_fail/orAssign.ts
let value: string | undefined;
value ||= "default";
